Fixed grid spacing

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -156,8 +156,8 @@ app {
 
 .ttt-grid-container {
     display: grid;
-    grid-template-columns: 33% 33% 33%;
-    grid-template-rows: 33% 33% 33%;
+    grid-template-columns: 33.3% 33.3% 33.3%;
+    grid-template-rows: 33.3% 33.3% 33.3%;
     padding: 5px;
     height: 400px;
     width: 400px;
@@ -172,7 +172,7 @@ app {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 2px;
+    margin: 3px;
     background-color: #555555;
 }
 
